--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,17 +3,18 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "keypass-secure-cli"
+name = "keypass-cli"
 version = "0.1.0"
 description = "keypass — minimal secure CLI demo (test only)"
 readme = "README.md"
 requires-python = ">=3.9"
-authors = [{ name = "Your Name", email = "you@example.com" }]
-license = "MIT"
+authors = [{ name = "khalil ben anane", email = "benananekhalilo@gmail.com" }]
+license = { text = "MIT" }
 keywords = ["cli", "security", "encryption", "mongodb", "credentials"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -39,6 +40,3 @@ Issues = "https://github.com/yourusername/myapp/issues"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["myapp*"]
-
-[tool.setuptools.package-data]
-myapp = ["*.py"]
